# dropshot-websocket-example

./: Cargo.toml  README.md  justfile
certs/: server.crt  server.key
src/: client.rs  server.rs
