[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
dropshot = "0.9.0"
env_logger = "0.10.0"
format_serde_error = "0.3.0"
futures = "0.3.28"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["native-tls-alpn"] }
schemars = "0.8.12"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
slog = "2.7.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.19.0"
